Remove obsolete code and simplify project structure